--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>D.com 2019 Summer Web Front-End Study Projects!</h1>
+    <ol>
+        <li><a href="./static/lecture01/1.introduction.html">Lecture 01</a></li>
+        <li>Lecture 02</li>
+        <li>Lecture 03</li>
+        <li>Lecture 04</li>
+        <li>Lecture 05</li>
+        <li>Lecture 06</li>
+    </ol>
 </body>
+
 </html>
