--- a/static/lecture01/index.html
+++ b/static/lecture01/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <h1>D.com 2019 Summer Web Front-End Study Projects!</h1>
+    <h1>Lecture 01</h1>
     <ol>
-        <li><a href="./static/lecture01/index.html">Lecture 01: Introduction!</a></li>
+        <li><a href="1.introduction.html">Example</a></li>
         <li>Lecture 02</li>
         <li>Lecture 03</li>
         <li>Lecture 04</li>
