--- a/index.html
+++ b/index.html
@@ -1,22 +1,154 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <title>D.COM Study</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
-<body>
-    <h1>D.com 2019 Summer Web Front-End Study Projects!</h1>
-    <ol>
-        <li><a href="./static/lecture01/index.html">Lecture 01: Introduction!</a></li>
-        <li>Lecture 02</li>
-        <li>Lecture 03</li>
-        <li>Lecture 04</li>
-        <li>Lecture 05</li>
-        <li>Lecture 06</li>
-    </ol>
+<body class="is-preload">
+
+    <!-- Sidebar -->
+    <section id="sidebar">
+        <div class="inner">
+            <nav>
+                <ul>
+                    <li><a href="#intro">Introduction</a></li>
+                    <li><a href="#one">Lecture 01</a></li>
+                    <li><a href="#two">Lecture 02</a></li>
+                    <li><a href="#three">Lecture 03</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+
+    <!-- Wrapper -->
+    <div id="wrapper">
+
+        <!-- Intro -->
+        <section id="intro" class="wrapper style1 fullscreen fade-up">
+            <div class="inner">
+                <h1>WEB Front-End Study by D.COM</h1>
+                <h2>Project Exhibition Place</h2>
+                <p>Lecture Introduction <a href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study">Github page</a><br />
+                </p>
+                <br>
+                <br>
+                <br>
+                <br>
+
+
+                <p>Designed by <a href="http://html5up.net">HTML5 UP</a>
+                    and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+            </div>
+        </section>
+
+        <!-- One -->
+        <section id="one" class="wrapper style2 fullscreen spotlights">
+            <section>
+               
+                <div class="content">
+                    <div class="inner">
+                        <h1>Lecture 01</h1>
+                        <h2>Introduction to Web Development. <br> Learn about Basic HTML tags.</h2>
+                        <h3>Projects</h3>
+                        <ul>
+                            <li><a href="./content/lecture01/example/1.introduction.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="#">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
+                            <li><a href="./content/lecture01/eeap/1.introduction.html">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
+                            <li><a href="./content/lecture01/kmilestone/1.Introduction.html">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="./content/lecture01/bluejoyq/1_Introduction.html">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
+                            <li><a href="./content/lecture01/yuseunggeun/1.introduction.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+            </section>
+
+        </section>
+
+        <!-- Two -->
+        <section id="two" class="wrapper style1 fullscreen spotlights">
+            <section>
+
+                <div class="content">
+                    <div class="inner">
+                        <h1>Lecture 02</h1>
+                        <h2>Learn about Basic CSS.</h2>
+                        <h3>Projects</h3>
+                        <ul>
+                            <li>Example</li>
+                            <li>choi5798</li>
+                            <li>Eeap</li>
+                            <li>KMileStone</li>
+                            <li>bluejoyq</li>
+                            <li>pmy0792</li>
+                            <li>yuseunggeun</li>
+                        </ul>
+
+                    </div>
+                </div>
+            </section>
+
+        </section>
+
+        <!-- Three -->
+        <section id="three" class="wrapper style3 fullscreen spotlights">
+            <section>
+                
+                <div class="content">
+                    <div class="inner">
+                        <h1>Lecture 03</h1>
+                        <h2>Learn about Advanced Styling Using Css.</h2>
+                        <h3>Projects</h3>
+                        <ul>
+                            <li>Example</li>
+                            <li>choi5798</li>
+                            <li>Eeap</li>
+                            <li>KMileStone</li>
+                            <li>bluejoyq</li>
+                            <li>pmy0792</li>
+                            <li>yuseunggeun</li>
+                        </ul>
+
+                    </div>
+                </div>
+            </section>
+
+        </section>
+
+
+    </div>
+
+    <!-- Footer -->
+    <footer id="footer" class="wrapper style1-alt">
+        <div class="inner">
+            <ul class="menu">
+                <li>&copy; D.COM. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
