--- a/static/html/lecture01/index.html
+++ b/static/html/lecture01/index.html
@@ -11,12 +11,14 @@
     <h1>Lecture 01</h1>
     <ol>
         <li><a href="1.introduction.html">Example</a></li>
-        <li>Lecture 02</li>
-        <li>Lecture 03</li>
-        <li>Lecture 04</li>
-        <li>Lecture 05</li>
-        <li>Lecture 06</li>
+        <li>choi5798</li>
+        <li>Eeap</li>
+        <li>KMileStone</li>
+        <li>bluejoyq</li>
     </ol>
+    <h2>
+        <span class="light">light</span> 
+    </h2>
 </body>
 
 </html>
