Add description d.com

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <section id="intro" class="wrapper style1 fullscreen fade-up">
             <div class="inner">
                 <h1>WEB Front-End Study by D.COM</h1>
+                <p>D.com, Computer Science and Engineering, KyungHee-University</p>
                 <h2>Project Exhibition Place</h2>
                 <p>Lecture Introduction <a href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study">Github page</a><br />
                 </p>
