Update Lecture01 Projects

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                             <li><a href="./content/lecture01/bluejoyq/1_Introduction.html">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
                             <li><a href="./content/lecture01/yuseunggeun/1.introduction.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="./content/lecture01/sunwupark/1.introduction.html">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="">splguyjr</a><a target="_blank" href="#">Github</a></li>
                         </ul>
 
                     </div>
