--- a/index.html
+++ b/index.html
@@ -65,14 +65,18 @@
                         <h3>Projects</h3>
                         <ul>
                             <li><a href="./content/lecture01/example/1.introduction.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
-                            <li><a href="#">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
+                            <li><a href="./content/lecture01/choi5798/1.Introduction.html">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
                             <li><a href="./content/lecture01/eeap/1.introduction.html">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="./content/lecture01/kmilestone/1.Introduction.html">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture01/bluejoyq/1_Introduction.html">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
                             <li><a href="./content/lecture01/yuseunggeun/1.introduction.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture01/sunwupark/1.introduction.html">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
-                            <li><a href="">splguyjr</a><a target="_blank" href="#">Github</a></li>
+                            <li><a href="">splguyjr</a><a target="_blank" href="https://github.com/splguyjr">Github</a></li>
+                            <li><a href="">Jaehooni</a><a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
+                            <li><a href="">sju0924</a><a target="_blank" href="https://github.com/sju0924">Github</a></li>
+                            <li><a href="">illgami784</a><a target="_blank" href="https://github.com/illgami784">Github</a></li>
+
                         </ul>
 
                     </div>
