Update Lecture 01 Projects

--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
                             <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
                             <li><a href="./content/lecture01/yuseunggeun/1.introduction.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture01/sunwupark/1.introduction.html">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
-                            <li><a href="">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
-                            <li><a href="">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
-                            <li><a href="">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
+                            <li><a href="./content/lecture01/splguyjr/1.Introduction.html">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
+                            <li><a href="./content/lecture01/Jaehooni/1.introduction.html">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
+                            <li><a href="./content/lecture01/sju0924/1.introduction.html">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
                             <li><a href="">illgami784</a> / <a target="_blank" href="https://github.com/illgami784">Github</a></li>
+                            <li><a href="./content/lecture01/qkrwodbsfj/1.introduction.html">qkrwodbsfj</a> / <a target="_blank" href="#">Github</a></li>
+                            <li><a href="">wjdwl0208</a> / <a target="_blank" href="#">Github</a></li>
+                            <li><a href="./content/lecture01/myyou331/1.introduction.html">myyou331</a> / <a target="_blank" href="https://github.com/myyou331">Github</a></li>
+                            
+
 
                         </ul>
 
