Update Lecture 02 Project Example

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <h1>Lecture 01</h1>
                         <h2>Introduction to Web Development. <br> Learn about Basic HTML tags.</h2>
                         <p><a href="./content/lecture01/Lecture 01.pdf" target="_blank">Lecture Note</a></p>
-                        <h3>Projects</h3>
+                        <h3>Projects: Introduction</h3>
                         <ul>
                             <li><a href="./content/lecture01/example/1.introduction.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
                             <li><a href="./content/lecture01/choi5798/1.Introduction.html">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
@@ -98,15 +98,24 @@
                     <div class="inner">
                         <h1>Lecture 02</h1>
                         <h2>Learn about Basic CSS.</h2>
-                        <h3>Projects</h3>
+                        <p><a href="./content/lecture02/example/Lecture 02.pdf" target="_blank">Lecture Note</a></p>
+                        <h3>Projects: D.COM MENU</h3>
                         <ul>
-                            <li>Example</li>
-                            <li>choi5798</li>
-                            <li>Eeap</li>
-                            <li>KMileStone</li>
-                            <li>bluejoyq</li>
-                            <li>pmy0792</li>
-                            <li>yuseunggeun</li>
+                            <li><a href="./content/lecture02/example/2.Menu/Menu.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
+                            <li><a href="">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
+                            <li><a href="">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
+                            <li><a href="">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
+                            <li><a href="">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
+                            <li><a href="">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
+                            <li><a href="">illgami784</a> / <a target="_blank" href="https://github.com/illgami784">Github</a></li>
+                            <li><a href="">qkrwodbsfj</a> / <a target="_blank" href="#">Github</a></li>
+                            <li><a href="">wjdwl0208</a> / <a target="_blank" href="#">Github</a></li>
+                            <li><a href="">myyou331</a> / <a target="_blank" href="https://github.com/myyou331">Github</a></li>
                         </ul>
 
                     </div>
@@ -125,13 +134,21 @@
                         <h2>Learn about Advanced Styling Using Css.</h2>
                         <h3>Projects</h3>
                         <ul>
-                            <li>Example</li>
-                            <li>choi5798</li>
-                            <li>Eeap</li>
-                            <li>KMileStone</li>
-                            <li>bluejoyq</li>
-                            <li>pmy0792</li>
-                            <li>yuseunggeun</li>
+                            <li><a href="./content/lecture02/example/2.Menu/Menu.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
+                            <li><a href="">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
+                            <li><a href="">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
+                            <li><a href="">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
+                            <li><a href="">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
+                            <li><a href="">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
+                            <li><a href="">illgami784</a> / <a target="_blank" href="https://github.com/illgami784">Github</a></li>
+                            <li><a href="">qkrwodbsfj</a> / <a target="_blank" href="#">Github</a></li>
+                            <li><a href="">wjdwl0208</a> / <a target="_blank" href="#">Github</a></li>
+                            <li><a href="">myyou331</a> / <a target="_blank" href="https://github.com/myyou331">Github</a></li>
                         </ul>
 
                     </div>
