--- a/content/lecture02/eeap/2/2.html
+++ b/content/lecture02/eeap/2/2.html
@@ -41,15 +41,15 @@
     <div><p id="font1">D.com <br><br>-Menu-<br><br>안주<br></p>
     
          <ul>
-             <li><a href="file:///C:/Users/김수민/Desktop/2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study/Front_End_Assignment/2/2-1.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처.PNG" alt="logo-image" /></a></li>
-             <li><a href="file:///C:/Users/%EA%B9%80%EC%88%98%EB%AF%BC/Desktop/2019-Web-FrontEnd-Study-master/2019_Summer_Web_Study/Front_End_Assignment/2/2-2.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처1.PNG" alt="logo-image" /></a></li>
-             <li><a href="file:///C:/Users/%EA%B9%80%EC%88%98%EB%AF%BC/Desktop/2019-Web-FrontEnd-Study-master/2019_Summer_Web_Study/Front_End_Assignment/2/2-3.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처2.PNG" alt="logo-image" /></a></li>
-             <li><a href="file:///C:/Users/%EA%B9%80%EC%88%98%EB%AF%BC/Desktop/2019-Web-FrontEnd-Study-master/2019_Summer_Web_Study/Front_End_Assignment/2/2-4.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처3.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-1.html" class="button"><img src="캡처.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-2.html" class="button"><img src="캡처1.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-3.html" class="button"><img src="캡처2.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-4.html" class="button"><img src="캡처3.PNG" alt="logo-image" /></a></li>
              <li id="font1"><br />음료<br /><br /></li>
-             <li><a href="file:///C:/Users/%EA%B9%80%EC%88%98%EB%AF%BC/Desktop/2019-Web-FrontEnd-Study-master/2019_Summer_Web_Study/Front_End_Assignment/2/2-5.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처4.PNG" alt="logo-image" /></a></li>
-             <li><a href="file:///C:/Users/%EA%B9%80%EC%88%98%EB%AF%BC/Desktop/2019-Web-FrontEnd-Study-master/2019_Summer_Web_Study/Front_End_Assignment/2/2-6.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처5.PNG" alt="logo-image" /></a></li>
-             <li><a href="file:///C:/Users/%EA%B9%80%EC%88%98%EB%AF%BC/Desktop/2019-Web-FrontEnd-Study-master/2019_Summer_Web_Study/Front_End_Assignment/2/2-7.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처6.PNG" alt="logo-image" /></a></li>
-             <li><a href="file:///C:/Users/%EA%B9%80%EC%88%98%EB%AF%BC/Desktop/2019-Web-FrontEnd-Study-master/2019_Summer_Web_Study/Front_End_Assignment/2/2-8.html" class="button"><img src="C:\Users\김수민\Desktop\2019-Web-FrontEnd-Study-master\2019_Summer_Web_Study\Front_End_Assignment\2\캡처7.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-5.html" class="button"><img src="캡처4.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-6.html" class="button"><img src="캡처5.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-7.html" class="button"><img src="캡처6.PNG" alt="logo-image" /></a></li>
+             <li><a href="2-8.html" class="button"><img src="캡처7.PNG" alt="logo-image" /></a></li>
          </ul>
     </div>
 
