Update Lecture 03 Example

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <li><a href="./content/lecture02/yuseunggeun/2.Menu/Menu.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture02/sunwupark/Week2Proj.html">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture02/splguyjr/2.Menu/주점.html">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
-                            <li><a href="">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
+                            <li><a href="./content/lecture02/Jaehooni/2.Menu/menu.html">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
                             <li><a href="">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
                             <li><a href="./content/lecture02/illgami784/2.Menu/Menu.html">illgami784</a> / <a target="_blank" href="https://github.com/illgami784">Github</a></li>
                             <li><a href="">qkrwodbsfj</a> / <a target="_blank" href="#">Github</a></li>
@@ -134,7 +134,7 @@
                         <h2>Learn about Advanced Styling Using Css.</h2>
                         <h3>Projects</h3>
                         <ul>
-                            <li><a href="./content/lecture02/example/2.Menu/Menu.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="./content/lecture03/example/3.Homepage/index.html / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
                             <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
                             <li><a href="">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
