--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <h2>Learn about Advanced Styling Using Css.</h2>
                         <h3>Projects</h3>
                         <ul>
-                            <li><a href="./content/lecture03/example/3.Homepage/index.html / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="./content/lecture03/example/3.Homepage/index.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
                             <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
                             <li><a href="">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
