--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                         <p><a href="./content/lecture01/Lecture 01.pdf" target="_blank">Lecture Note</a></p>
                         <h3>Projects: Introduction</h3>
                         <ul>
-                            <li><a href="./content/lecture01/example/1.introduction.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="./content/lecture01/example/1.introduction.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment">Github</a></li>
                             <li><a href="./content/lecture01/choi5798/1.Introduction.html">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
                             <li><a href="./content/lecture01/eeap/1.introduction.html">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="./content/lecture01/kmilestone/1.Introduction.html">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture01/bluejoyq/1_Introduction.html">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
-                            <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
+                            <li><a href="./content/lecture01/pmy0792/1.Introduction.html">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
                             <li><a href="./content/lecture01/yuseunggeun/1.introduction.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture01/sunwupark/1.introduction.html">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture01/splguyjr/1.Introduction.html">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
@@ -101,17 +101,17 @@
                         <p><a href="./content/lecture02/example/Lecture 02.pdf" target="_blank">Lecture Note</a></p>
                         <h3>Projects: D.COM MENU</h3>
                         <ul>
-                            <li><a href="./content/lecture02/example/2.Menu/Menu.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="./content/lecture02/example/2.Menu/Menu.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment">Github</a></li>
                             <li><a href="./content/lecture02/choi5798/2. Menu/main.html">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
                             <li><a href="./content/lecture02/eeap/2/2.html">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="./content/lecture02/kmilestone/2.Menu/2.Menu.html">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture02/bluejoyq/2.Menu/2_1.html">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
-                            <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
+                            <li><a href="./content/lecture02/pmy0792/menu.html">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
                             <li><a href="./content/lecture02/yuseunggeun/2.Menu/Menu.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture02/sunwupark/Week2Proj.html">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="./content/lecture02/splguyjr/2.Menu/주점.html">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
                             <li><a href="./content/lecture02/Jaehooni/2.Menu/menu.html">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
-                            <li><a href="">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
+                            <li><a href="./content/lecture02/sju0924/2.menu/Menuboard.html">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
                             <li><a href="./content/lecture02/illgami784/2.Menu/Menu.html">illgami784</a> / <a target="_blank" href="https://github.com/illgami784">Github</a></li>
                             <li><a href="">qkrwodbsfj</a> / <a target="_blank" href="#">Github</a></li>
                             <li><a href="">wjdwl0208</a> / <a target="_blank" href="#">Github</a></li>
@@ -134,7 +134,7 @@
                         <h2>Learn about Advanced Styling Using Css.</h2>
                         <h3>Projects</h3>
                         <ul>
-                            <li><a href="./content/lecture03/example/3.Homepage/index.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment/Lecture%2001">Github</a></li>
+                            <li><a href="./content/lecture03/example/3.Homepage/index.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment">Github</a></li>
                             <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
                             <li><a href="">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
