--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     <div class="inner">
                         <h1>Lecture 03</h1>
                         <h2>Learn about Advanced Styling Using Css.</h2>
+                        <p><a href="./content/lecture03/example/Lecture 03.pdf" target="_blank">Lecture Note</a></p>
                         <h3>Projects</h3>
                         <ul>
                             <li><a href="./content/lecture03/example/3.Homepage/index.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment">Github</a></li>
