Update Lecture 03 Projects

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <li><a href="">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
-                            <li><a href="">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
+                            <li><a href="./content/lecture03/Jaehooni/3.Homepage/Main.html">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
                             <li><a href="">sju0924</a> / <a target="_blank" href="https://github.com/sju0924">Github</a></li>
                             <li><a href="">illgami784</a> / <a target="_blank" href="https://github.com/illgami784">Github</a></li>
                             <li><a href="">qkrwodbsfj</a> / <a target="_blank" href="#">Github</a></li>
