Update Lecture 03 Projects Description

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <h1>Lecture 03</h1>
                         <h2>Learn about Advanced Styling Using Css.</h2>
                         <p><a href="./content/lecture03/example/Lecture 03.pdf" target="_blank">Lecture Note</a></p>
-                        <h3>Projects</h3>
+                        <h3>Projects: Landing Page</h3>
                         <ul>
                             <li><a href="./content/lecture03/example/3.Homepage/index.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment">Github</a></li>
                             <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
