Update Lecture 03 Projects

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <li><a href="./content/lecture03/kmilestone/3.Homepage/3.Homepage.html">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
-                            <li><a href="">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="./content/lecture03/yuseunggeun/3.Homepage/landing.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
                             <li><a href="./content/lecture03/Jaehooni/3.Homepage/Main.html">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
