--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                         <h3>Projects: Landing Page</h3>
                         <ul>
                             <li><a href="./content/lecture03/example/3.Homepage/index.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment">Github</a></li>
-                            <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
+                            <li><a href="./content/lecture03/choi5798/3. Homepage/home.html">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
                             <li><a href="./content/lecture03/eeap/3.Homepage/homepage.html">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="./content/lecture03/kmilestone/3.Homepage/3.Homepage.html">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
-                            <li><a href="">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="./content/lecture03/bluejoyq/3_/3_1_main.html">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
                             <li><a href="./content/lecture03/yuseunggeun/3.Homepage/landing.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
