Update Lecture 04 Projects

--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
                         <h3>Projects: Web Master</h3>
                         <ul>
                             <li><a href="./content/lecture04/example/webmaster.html">Example</a> / <a target="_blank" href="https://github.com/Dcom-KHU/2019-Web-FrontEnd-Study/tree/master/Example-Assignment">Github</a></li>
-                            <li><a href="">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
-                            <li><a href="">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
+                            <li><a href="./content/lecture04/choi5798/4.master/master.html">choi5798 </a> / <a target="_blank" href="https://github.com/choi5798">Github</a></li>
+                            <li><a href="./content/lecture04/eeap/4.master/Master.html">Eeap </a> / <a target="_blank" href="https://github.com/eeap/2019_Summer_Web_Study">Github</a> </li>
                             <li><a href="./content/lecture04/kmilestone/4.Master/4.Master.html">KMileStone</a> / <a target="_blank" href="https://github.com/KMileStone/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">bluejoyq</a> / <a target="_blank" href="https://github.com/bluejoyq/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="#">pmy0792 </a> / <a target="_blank" href="https://github.com/pmy0792">Github</a></li>
-                            <li><a href="">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
+                            <li><a href="./content/lecture04/yuseunggeun/4.master/Master.html">yuseunggeun </a> / <a target="_blank" href="https://github.com/yuseunggeun/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">sunwupark</a> / <a target="_blank" href="https://github.com/sunwupark/2019_Summer_Web_Study">Github</a></li>
                             <li><a href="">splguyjr</a> / <a target="_blank" href="https://github.com/splguyjr">Github</a></li>
                             <li><a href="">Jaehooni</a> / <a target="_blank" href="https://github.com/Jaehooni">Github</a></li>
